[package]
name = "convergence-signal"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Convergence signal — proof that seph.1 spawned seph.1.1"

[[bin]]
name = "convergence-signal"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
kube = { version = "0.96", features = ["runtime", "client", "rustls-tls"], default-features = false }
k8s-openapi = { version = "0.23", features = ["v1_31"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
